update travis badge.

--- a/browser-test/index.html
+++ b/browser-test/index.html
@@ -1,2 +1,7 @@
+<!doctype html>
+
+<center>open the console to see the test results and play with SummulaDB.</center>
+
 <script src=../dist/summuladb.min.js></script>
 <script src=bundle.js></script>
+<script>console.log('create a new database with the global `SummulaDB`: \nvar db = SummulaDB()')</script>
